--- a/app/src/main/res/layout/add_note.xml
+++ b/app/src/main/res/layout/add_note.xml
@@ -2,24 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="400dp"
-    android:background="@color/background_green_light"
-    android:gravity="center"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/background_green_medium"
         android:padding="5dp"
-        android:text="Group Manually"
+        android:text="Add Note"
         android:textAlignment="center"
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/gm_ticketName"
+        android:id="@+id/an_nameText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -29,49 +27,29 @@
         android:textAlignment="center"
         android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="Group with..."
-        android:textAlignment="center"
-        android:textSize="18sp" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/groupRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="7"
-        android:background="@color/background_green_light"
-        android:padding="5dp">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-    <TextView
-        android:id="@+id/gm_ticketsFound"
+    <EditText
+        android:id="@+id/an_editNoteText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:text="X tickets found"
-        android:textAlignment="center"
-        android:textSize="18sp" />
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="Text"
+        android:inputType="textMultiLine"
+        android:minHeight="48dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <Button
-            android:id="@+id/gm_cancelButton"
-            android:layout_width="wrap_content"
+            android:id="@+id/an_cancelButton"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="40dp"
             android:layout_weight="1"
@@ -82,11 +60,10 @@
             app:strokeWidth="2dp" />
 
         <Button
-            android:id="@+id/gm_acceptButton"
-            android:layout_width="wrap_content"
+            android:id="@+id/an_acceptButton"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Accept" />
     </LinearLayout>
-
 </LinearLayout>
