--- a/app/src/main/res/layout/checkin_listitem.xml
+++ b/app/src/main/res/layout/checkin_listitem.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_weight="6"
+            android:layout_weight="9"
             android:text="Name Namesson"
             android:textColor="#000000" />
 
@@ -33,14 +33,13 @@
             android:textAlignment="center"
             android:textColor="#000000" />
 
-        <TextView
-            android:id="@+id/checkin_noteText"
+        <Button
+            android:id="@+id/checkin_groupButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:layout_weight="11"
-            android:text="Very much info text to note"
-            android:textColor="#000000" />
+            android:layout_weight="5"
+            android:text="Group" />
 
         <Button
             android:id="@+id/checkin_infoButton"
@@ -81,6 +80,33 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/checkin_notepanel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/background_green_extralight"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:paddingBottom="5dp"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="Note:"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/checkin_noteText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="note text"
+            android:textStyle="italic" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/checkIn_itemInfoHeaders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,7 +121,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:text="Guardian\nName"
+            android:text="Guardian Name"
             android:textStyle="bold" />
 
         <TextView
@@ -104,16 +130,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:text="Guardian\nPhone Nr"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/checkin_BookerEmailHeader"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:text="Booker\nEmail"
+            android:text="Guardian Phone Nr"
             android:textStyle="bold" />
 
         <TextView
@@ -122,13 +139,18 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:text="Booker\nName"
+            android:text="Booker Name"
             android:textStyle="bold" />
 
-        <Space
+        <TextView
+            android:id="@+id/checkin_BookerEmailHeader"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3" />
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:text="Booker Email"
+            android:textStyle="bold" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -159,15 +181,6 @@
             android:textColor="#000000" />
 
         <TextView
-            android:id="@+id/checkin_BookerEmail"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:text="nameo_parentson_also_long_embarrassing_adress@email.com"
-            android:textColor="#000000" />
-
-        <TextView
             android:id="@+id/checkin_BookerName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -176,15 +189,52 @@
             android:text="Nameson Booker"
             android:textColor="#000000" />
 
+        <TextView
+            android:id="@+id/checkin_BookerEmail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:text="nameo_parentson_also_long_embarrassing_adress@email.com"
+            android:textColor="#000000" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/background_green_medium"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
         <Button
-            android:id="@+id/checkin_removeButton"
+            android:id="@+id/checkin_editNoteButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:layout_marginLeft="5dp"
             android:layout_weight="0.3"
-            android:backgroundTint="#E12727"
+            android:backgroundTint="#FFFFFF"
+            android:text="Edit Note"
             android:textColor="#000000"
-            app:icon="@drawable/ic_baseline_delete_24"
+            app:iconGravity="textStart"
+            app:iconPadding="0dp"
+            app:iconSize="20dp"
+            app:iconTint="#000000"
+            app:strokeColor="#000000"
+            app:strokeWidth="2dp" />
+
+        <Button
+            android:id="@+id/checkin_HideNoteButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0.3"
+            android:backgroundTint="#FFFFFF"
+            android:text="Hide Note"
+            android:textColor="#000000"
             app:iconGravity="textStart"
             app:iconPadding="0dp"
             app:iconSize="20dp"
