--- a/app/src/main/res/layout/fragment_event_view.xml
+++ b/app/src/main/res/layout/fragment_event_view.xml
@@ -396,9 +396,9 @@
                                 android:id="@+id/check_in_orgBy_note"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="11"
+                                android:layout_weight="5"
                                 android:backgroundTint="#FFFFFF"
-                                android:text="Note"
+                                android:text="Group"
                                 android:textAlignment="viewStart"
                                 android:textColor="#000000"
                                 android:textSize="12sp"
