--- a/app/src/main/res/layout/assign_team_item.xml
+++ b/app/src/main/res/layout/assign_team_item.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/background_green_extralight"
         android:gravity="center"
         android:orientation="horizontal"
@@ -107,7 +107,7 @@
     <LinearLayout
         android:id="@+id/assignTeam_notepanel"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/background_green_extralight"
         android:orientation="horizontal"
         android:padding="5dp"
@@ -230,7 +230,7 @@
     <LinearLayout
         android:id="@+id/assignTeam_itemButtons"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/background_green_medium"
         android:gravity="top"
         android:orientation="horizontal"
