--- a/app/src/main/res/layout/fragment_event_admin.xml
+++ b/app/src/main/res/layout/fragment_event_admin.xml
@@ -119,7 +119,7 @@
         android:weightSum="3"
         app:layout_constraintBottom_toTopOf="@+id/layout3"
         app:layout_constraintTop_toBottomOf="@+id/layout1"
-        app:layout_constraintVertical_weight="1">>
+        app:layout_constraintVertical_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
