--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="mageColor">#6C3CD8</color>
     <color name="rogueColor">#683D20</color>
     <color name="knightColor">#D88E0E</color>
+    <color name="warriorColor">#964B00</color>
     <color name="teamBlueColor">#2B80FF</color>
     <color name="teamRedColor">#ED6363</color>
     <color name="buttonGreen">#148800</color>
