--- a/app/src/main/res/layout/manual_player_link.xml
+++ b/app/src/main/res/layout/manual_player_link.xml
@@ -33,7 +33,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
@@ -42,7 +41,6 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView22"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
@@ -51,7 +49,6 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView26"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
@@ -60,7 +57,6 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView28"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
@@ -69,21 +65,19 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView30"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="Guardian Name"
+                android:text="Booker Address"
                 android:textColor="#000000"
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView32"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Guardian Phone"
-                android:textSize="18sp"
-                android:textColor="#000000" />
+                android:text="Booker Phone"
+                android:textColor="#000000"
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -129,16 +123,16 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/mpl_guardianNameText"
+                android:id="@+id/mpl_bookerAdressText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="guardian nameson"
+                android:text="Roadstreet 23"
                 android:textColor="#000000"
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/mpl_guardianPhoneText"
+                android:id="@+id/mpl_bookerPhoneText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="07676767677"
@@ -148,17 +142,12 @@
 
     </LinearLayout>
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mpl_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <LinearLayout
-            android:id="@+id/mpl_playerLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+        android:layout_weight="1"
+        android:layout_margin="10dp"/>
 
     <TextView
         android:id="@+id/mpl_noEntriesText"
