--- a/app/src/main/res/layout/manual_player_listitem.xml
+++ b/app/src/main/res/layout/manual_player_listitem.xml
@@ -3,12 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:layout_marginBottom="10dp"
+    android:descendantFocusability="blocksDescendants">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/background_green_extralight"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -19,7 +20,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="First Name"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            />
 
         <TextView
             android:id="@+id/player_last_name"
@@ -57,28 +59,32 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Booker Names"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Booker Phone No"
-                android:textSize="16sp" />
+                android:text="Booker Phone"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Booker Emails"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Booker Addresses"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold"/>
 
         </LinearLayout>
 
