--- a/app/src/main/res/layout/note_popup.xml
+++ b/app/src/main/res/layout/note_popup.xml
@@ -29,7 +29,7 @@
         android:id="@+id/notePopupAcceptButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Accept"
+        android:text="Ok"
         android:layout_margin="5dp"/>
 
 </LinearLayout>
