--- a/app/src/main/res/navigation/navigation_hub.xml
+++ b/app/src/main/res/navigation/navigation_hub.xml
@@ -11,15 +11,8 @@
         android:label="EventList"
         tools:layout="@layout/fragment_event_list">
         <action
-            android:id="@+id/action_eventList_to_eventView"
-            app:destination="@id/eventView"
-            app:enterAnim="@anim/in_from_right"
-            app:exitAnim="@anim/out_to_left"
-            app:popEnterAnim="@anim/in_from_left"
-            app:popExitAnim="@anim/out_to_right" />
-        <argument
-            android:name="messageEventId"
-            app:argType="string" />
+            android:id="@+id/action_eventList_to_eventAdminFrag"
+            app:destination="@id/eventAdminFrag" />
     </fragment>
     <fragment
         android:id="@+id/eventView"
@@ -28,18 +21,13 @@
         tools:layout="@layout/fragment_event_view">
         <argument
             android:name="passedEventId"
-            android:defaultValue="A234"
             app:argType="string" />
         <action
             android:id="@+id/action_eventView_to_levelUpFragment"
             app:destination="@id/levelUpFragment" />
         <action
-            android:id="@+id/action_eventView_to_eventList"
-            app:destination="@id/eventList"
-            app:enterAnim="@anim/in_from_left"
-            app:exitAnim="@anim/out_to_right"
-            app:popEnterAnim="@anim/in_from_right"
-            app:popExitAnim="@anim/out_to_left" />
+            android:id="@+id/action_eventView_to_eventAdminFrag"
+            app:destination="@id/eventAdminFrag" />
     </fragment>
     <fragment
         android:id="@+id/levelUpFragment"
@@ -52,5 +40,23 @@
         <action
             android:id="@+id/action_levelUpFragment_to_eventView"
             app:destination="@id/eventView" />
+        <argument
+            android:name="passedEventId"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/eventAdminFrag"
+        android:name="com.example.heroadmin.EventAdminFrag"
+        android:label="fragment_event_admin"
+        tools:layout="@layout/fragment_event_admin">
+        <action
+            android:id="@+id/action_eventAdminFrag_to_eventView"
+            app:destination="@id/eventView" />
+        <action
+            android:id="@+id/action_eventAdminFrag_to_eventList"
+            app:destination="@id/eventList" />
+        <argument
+            android:name="messageEventId"
+            app:argType="string" />
     </fragment>
 </navigation>
